kustomize/ingress/nginx-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.salverdaserver.nl
    secretName: quickstart-example-tls
  rules:
  - host: grafana.salverdaserver.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
     # This should be the in-cluster DNS name for the authentik outpost service
    # as when the external URL is specified here, nginx will overwrite some crucial headers
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-authentik-embedded-outpost.auth.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    # If you're using domain-level auth, use the authentication URL instead of the application URL
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.salverdaserver.nl/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.salverdaserver.nl
    secretName: longhorn-tls
  rules:
  - host: longhorn.salverdaserver.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Or your certificate issuer
  name: wg-easy
  namespace: vpn
spec:
  ingressClassName: nginx
  rules:
    - host: wg.salverdaserver.nl
      http:
        paths:
          - backend:
              service:
                name: wg-easy-http
                port: 
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - wg.salverdaserver.nl
      secretName: wg-easy-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Or your certificate issuer
  name: authentik
  namespace: auth
spec:
  ingressClassName: nginx
  rules:
    - host: auth.salverdaserver.nl
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port: 
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - auth.salverdaserver.nl
      secretName: auth-tls
---
